# nois

./: .eslintrc  README.md  package.json
.github/workflows/: app-code-style.yml
api/: pyproject.toml
api/nois_api/: main.py
app/: README.md  app.json
app/src/components/: FormikTextInput.tsx
app/src/contexts/: ThemeContext.ts
app/src/hooks/useTheme/: index.ts
app/src/screens/: Home.tsx
docs/: app-architecture.md  cloud-architecture.md  workinghours.md
nois-api/: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
nois-api/edgedb/: docker-compose.yml  initialize_db.edgeql  initialize_schema.edgeql  run_edgedb_setup.sh
nois-api/migrations/: README.md  env.py
nois-api/migrations/versions/: 555d92499f4a_add_message_and_thread_connections.py  c16e8ce10ca9_re_initialize_databases.py  c6e07d15161c_add_initial_tables.py
nois-api/nois_api/: app.py  config.py  db.py  main.py  recourses.py
nois-api/nois_api/api/: __init__.py
nois-api/nois_api/database/: __init__.py  schema.esdl
nois-api/nois_api/file_api/: __init__.py  api.py
nois-api/nois_api/file_io/: __init__.py
nois-api/nois_api/gino/: models.py
nois-api/nois_api/graphql/: __init__.py  mutations.py  queries.py  resolvers.py  schema.graphql  schema.py  types.py
nois-api/nois_api/graphql/types/: message.py  thread.py
nois-api/tests/: conftest.py  test_file_api.py
nois-app/: .eslintrc  App.tsx  README.md  app.json  package.json  theme.json  tsconfig.json
nois-app/src/components/: Home.tsx
nois-app/src/contexts/: ThemeContext.ts
nois-app/src/hooks/: useRecording.ts
server/: .gitignore  README.md  docker-compose.yml  pyproject.toml
server-deployment/: README.md
server/server/: __init__.py  config.py
server/server/api/: __init__.py
server/server/database/: __init__.py  schema.esdl  utils.py
server/server/file_io/: __init__.py
server/server/graphql/: __init__.py  resolvers.py  schema.graphql
server/server/graphql/queries/: messages.py  threads.py
server/server/graphql/types/: message.py  thread.py  user.py
src/hooks/useRecorder/: index.ts  recorderMachine.ts
