[tool.poetry]
name = "nois-api"
version = "0.1.0"
description = ""
authors = ["Otto Ahoniemi <otto@ottoahoniemi.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.11.8"
starlette = "^0.13.8"
graphene = "^2.1.8"
gino = "^1.0.1"
gino-starlette = "^0.1.1"
aiofiles = "^0.5.0"
pyyaml = "^5.3.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.0.2"
requests = "^2.24.0"
alembic = "^1.4.3"
psycopg2-binary = "^2.8.6"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
