[tool.poetry]
name = "Nois server"
version = "0.1.0"
description = ""
authors = ["Otto Ahoniemi <otto@ottoahoniemi.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.11.8"
starlette = "^0.13.8"
aiofiles = "^0.5.0"
graphene = {version = "^2.1.8", allow-prereleases = true}
graphene-file-upload = {version = "^1.3.0", allow-prereleases = true}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.0.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
